# todo-issue-reopener

./: .aqua-checksums.json  .aqua.yaml  .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .textlintrc.yaml  .zizmor.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  action.yml  aqua-checksums.json  aqua.yaml  codecov.yml  eslint.config.js  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pyproject.toml  renovate.json5  requirements-dev.txt  requirements.txt  rollup.config.ts  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  zizmor.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  pre-submit.dependabot.codecov.yml  pre-submit.pr-title.yml  pre-submit.units.yml  pull_request.autofix.yml  pull_request.tests.yml  schedule.issue-reopener.yml  schedule.scorecard.yml  schedule.stale.yml  scorecards.yml  workflow_call.actionlint.yml  workflow_call.check-dist.yml  workflow_call.checkmake.yml  workflow_call.commitlint.yml  workflow_call.e2e.yml  workflow_call.eslint.yml  workflow_call.fixme.yml  workflow_call.format-check.yml  workflow_call.formatting.yml  workflow_call.license-headers.yml  workflow_call.markdownlint.yml  workflow_call.renovate-config-validator.yml  (+5 more)
__fixtures__/: core.ts  exec.ts  github.ts  reopener.ts  tool-cache.ts  verifier.ts
__tests__/: action.test.ts  config.test.ts  reopener.test.ts  verifier.test.ts
coverage/: cobertura-coverage.xml
lib/: action.js  config.js  main.js  reopener.js  verifier.js
src/: action.ts  config.ts  main.ts  reopener.ts  verifier.ts
